# platform-maturity-model

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: nightly-agent.yml
docs/: self-assessment.json
docs/adr/: README.md
scripts/: nightly_agent.py
src/maturity/: __init__.py  cli.py
src/maturity/assessors/: repo.py  scorer.py
src/maturity/core/: config.py
src/maturity/model/: evidence.py  levels.py
src/maturity/reporters/: markdown.py  narrator.py
tests/: test_assessors.py  test_levels.py  test_reporters.py
